# xpcs-baseline

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  requirements.txt  setup.py
SlowFT/: CMakeLists.txt  dft.cpp
lammps/: in.melt
script/: calc_scattering.py  export_first_frame.py  mdscatter.py  upload_to_gist.sh
src/: CMakeLists.txt  complex.h  dft.cpp  gpu_dft.cu
